Added example of dependencies list, user input tutorial

--- a/Documentation/Tutorial.ipynb
+++ b/Documentation/Tutorial.ipynb
@@ -13,7 +13,9 @@
    "id": "5e757995",
    "metadata": {},
    "source": [
-    "This is a tutorial for the solver."
+    "This is a tutorial for using SPAMS to solve a simple problem....\n",
+    "\n",
+    "For more advanced features please see the full documentation."
    ]
   },
   {
@@ -77,17 +79,92 @@
    "id": "23d6d998",
    "metadata": {},
    "source": [
-    "Insert instructions on user input."
+    "Here, we will go through the key parts of the input file that you will need to edit in order to run the solver for your specific system. \n",
+    "\n",
+    "Here is a explanation of how to find, open and edit the input file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36735f82",
+   "metadata": {},
+   "source": [
+    "The default name for the file is 'user_input', this can be changed if desired.\n",
+    "\n",
+    "*Please note this will change the command required to run the solver.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "cef968c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### Set filename to output user input parameters ######\n",
+    "# Set string for filename. Do not enter a file extension. Max characters = 50\n",
+    "output_filename = 'user_input'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38a9c73",
+   "metadata": {},
+   "source": [
+    "Here, you can input the parameters of your system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8916ff72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Example input code"
+    "# Number of timesteps, integer, greater than 0. Do not change if read iapp from file.\n",
+    "#tsteps = 100\n",
+    "# Timestep size (s), real, greater than 0\n",
+    "dt = 0.1\n",
+    "# Initial concentration (mol m**-3), real, positive\n",
+    "c0 = 0.0\n",
+    "# Diffusion coefficient (m**2 s**-1), real\n",
+    "D = 4.0e-15\n",
+    "# Width of block (m), real, greater than 0\n",
+    "R = 5.86e-6\n",
+    "# Particle surface area per unit volume (m**-1), real, greater than 0\n",
+    "a = 3.821839e5\n",
+    "# Electrode thickness (m), real, greater than 0\n",
+    "L = 85.2e-6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8373c4",
+   "metadata": {},
+   "source": [
+    "Now you can choose how to apply current top the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1248d1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### Manually set up applied current ######\n",
+    "### Applied current (A m**2), real array of length tsteps\n",
+    "\n",
+    "### Constant current\n",
+    "### Set iapp_const as constant float value\n",
+    "#iapp_const = 0.73*10**(-3)\n",
+    "#iapp, iapp_label = UI.iapp_constant_setup(tsteps, iapp_const)\n",
+    "\n",
+    "### Step function\n",
+    "### Create 2D array of step values and timesteps where step occurs, starting timestep 0\n",
+    "### Timesteps must be integers\n",
+    "#iapp_steps = [[0.73*10**(-3), 0], [-0.73*10**(-3), int(tsteps/4)], [0.73*10**(-3), int(tsteps/2)]]\n",
+    "#iapp, iapp_label = UI.iapp_step_setup(tsteps, iapp_steps)"
    ]
   },
   {
@@ -103,7 +180,7 @@
    "id": "3665c244",
    "metadata": {},
    "source": [
-    "Insert instructions on running the solver"
+    "To run the solver, navigate to the directory containing your files and enter the following command into the command line."
    ]
   },
   {
