--- a/Documentation/Tutorial.ipynb
+++ b/Documentation/Tutorial.ipynb
@@ -31,7 +31,22 @@
    "id": "152811fb",
    "metadata": {},
    "source": [
-    "Insert list of all required modules"
+    "In order to run the code, your system will need the following:\n",
+    "\n",
+    "- GCC/10.x\n",
+    "- OpenMPI/4.x\n",
+    "- Python/3.8.x\n",
+    "- inset further modules here\n",
+    "\n",
+    "If using an SCRTP managed system, you can use tehthe following commands to ensure the correct requirements:\n",
+    "\n",
+    "First purge your currently loaded modules to ensure there will be no clashes using\n",
+    "\n",
+    "    module purge\n",
+    "\n",
+    "Now load the required modules using\n",
+    "\n",
+    "    module load GCC/10.x OpenMPI/4.x Python/3.8.x "
    ]
   },
   {
@@ -180,17 +195,9 @@
    "id": "3665c244",
    "metadata": {},
    "source": [
-    "To run the solver, navigate to the directory containing your files and enter the following command into the command line."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "778a34f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Example code"
+    "To run the solver, navigate to the directory containing your files and enter the following command into the command line\n",
+    "\n",
+    "    python3 user_input.py"
    ]
   },
   {
@@ -206,7 +213,7 @@
    "id": "f6d1764c",
    "metadata": {},
    "source": [
-    "Insert instructions on visualisation"
+    "Insert instructions on visualisation (Jake feel free to help with this part)"
    ]
   },
   {
