--- a/Documentation/Tutorial.ipynb
+++ b/Documentation/Tutorial.ipynb
@@ -35,7 +35,11 @@
     "\n",
     "- GCC/10.x\n",
     "- OpenMPI/4.x\n",
+    "- shlex\n",
     "- Python/3.8.x\n",
+    "- Numpy\n",
+    "- Matplotlib\n",
+    "- netCDF4\n",
     "- inset further modules here\n",
     "\n",
     "If using an SCRTP managed system, you can use tehthe following commands to ensure the correct requirements:\n",
@@ -54,7 +58,7 @@
    "id": "1161615c",
    "metadata": {},
    "source": [
-    "## Installing the code"
+    "## Installing the code (dowloading from git)"
    ]
   },
   {
@@ -62,7 +66,9 @@
    "id": "3e18964e",
    "metadata": {},
    "source": [
-    "Insert instructions for installing the code."
+    "To install SPAMS, navigate to the directory in your file system where you would like to download it, and use the following command:\n",
+    "\n",
+    "    git clone https://github.com/HetSys/PX915_GroupB_22-23"
    ]
   },
   {
@@ -75,10 +81,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefa0522",
+   "id": "bb90a20e",
    "metadata": {},
    "source": [
-    "Insert instructions for building/running the code."
+    "A makefile is included, so to compile the code, simply use the 'make' command from within the SPAMS directory.\n",
+    "\n",
+    "To test the code is running correctly, you can run the solver with the default parameters using the command\n",
+    "\n",
+    "    python3 user_input.py\n",
+    "\n",
+    "This should produce two outputs:\n",
+    "\n",
+    "Firstly, a plot of the concentration profile at the end of the simulation (shown below), and secondly an animation showing the concentration across time.\n",
+    "\n",
+    "![fig1](Figure_1.png)"
    ]
   },
   {
@@ -86,7 +102,7 @@
    "id": "025b87c1",
    "metadata": {},
    "source": [
-    "## A simple input file"
+    "## The input file"
    ]
   },
   {
