Finished comments and formatting for user_input_mod and minor tutorial update.

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -60,7 +60,7 @@
    "id": "1161615c",
    "metadata": {},
    "source": [
-    "## Installing the code (dowloading from git)"
+    "## Installing the code (downloading from git)"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "\n",
     "- **D**: The diffusion constant in m<sup>2</sup> s<sup>-1</sup>. This must be a float (default = 4.0e-15).\n",
     "\n",
-    "- **R**: Width of the block in meters. This must be a float with a value greater than 0 (default = 5.86e-6).\n",
+    "- **R**: The radius of the sphere used in the SPM in m. This must be a float with a value greater than 0 (default = 5.86e-6).\n",
     "\n",
     "- **a**: Particle surface area per unit volume (m<sup>-1</sup>). This must be a float with a value greater than or equal to 0.\n",
     "\n",
@@ -221,9 +221,9 @@
     "\n",
     "- **iapp**: Applied current density in A m<sup>2</sup>. This must be a 1D array of floats of length tsteps. The default sets a constant current density of 0.73*10<sup>-3</sup>.\n",
     "\n",
-    "- **iapp_label**: Label of applied current density, string.\n",
+    "- **iapp_label**: Labels the type of applied current density, e.g. constant or from file string.\n",
     "\n",
-    "- **electrode_charge**: Label of electrode charge as positive or negative. (default = p for positive electroe, n for negative electrode)."
+    "- **electrode_charge**: Label of electrode charge as positive or negative. (default = p for positive electrode, n for negative electrode)."
    ]
   },
   {
@@ -273,7 +273,7 @@
    "outputs": [],
    "source": [
     "# Number of timesteps, integer, greater than 0. Do not change if read iapp from file.\n",
-    "#tsteps = 100\n",
+    "tsteps = 100\n",
     "# Timestep size (s), real, greater than 0\n",
     "dt = 0.1\n",
     "# Initial concentration (mol m**-3), real, positive\n",
