--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -141,18 +141,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "025b87c1",
    "metadata": {},
    "source": [
-    "## A simple input file"
+    "## A Simple Input File"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23d6d998",
    "metadata": {},
    "source": [
+    "User input can be provided to the solver in two ways: by passing a simple input file containing a set of parameters or by passing a checkpoint file containing the end state of a previous run. The following are instructions to produce a simple input file.\n",
+    "\n",
     "In order to use solver parameters specific to your system, you will need to edit the user input file.\n",
     "\n",
     "In the main directory locate the file called 'user_input.py' and open it with your preferred text editor.\n",
@@ -161,21 +165,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "edd220af",
    "metadata": {},
    "source": [
-    "### Input file name"
+    "### Input File Name"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36735f82",
    "metadata": {},
    "source": [
-    "The default name for the input file is 'user_input', this can be changed if desired. You do not need to add a file extension, and there is a characters limit of 50.\n",
+    "In order to produce a simple input file, 'checkpoint' should be set to 'False'.\n",
     "\n",
-    "*Please note changing this filename will change the command required to run the solver.*"
+    "The default name for the input file is 'user_input', this can be changed if desired. You do not need to add a file extension, and there is a characters limit of 50."
    ]
   },
   {
@@ -185,39 +191,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the name of this of this file containing the user input parameters.\n",
+    "# Select input file: checkpoint file (True) or user input parameters (False).\n",
+    "# Enter the filename of desired checkpoint file or the desired name of the file containing user input parameters.\n",
+    "checkpoint = False\n",
     "solver_input_filename = 'user_input'"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2af1b8e5",
    "metadata": {},
    "source": [
     "### Input Parameters \n",
     "\n",
-    "Below, is a list of all available input parameters, along with their default values."
+    "Below, is a list of all available input parameters. Default values are provided for parameters that do not change between the positive and negative electodes."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a0a19c5",
    "metadata": {},
    "source": [
-    "- **tsteps**: The total number of timesteps for which the simulation is run. This must be an integer value greater than 0, (default = 100). \n",
+    "- **tsteps**: The total number of timesteps for which the simulation is run. This must be an integer value greater than 0 (default = 100). \n",
     "*Do not change this if reading iapp from file.*\n",
     "\n",
     "- **dt**: The size of the timestep size in seconds. This must be a float with a value greater than 0 (default = 0.1).\n",
     "\n",
-    "- **c0**: Sets the initial concentration in mol m<sup>-3</sup>, This must be a float with a value greater than 0 (default = 0.0).\n",
+    "- **n**: The number of spatial nodes over which the simulation is run. This must be an integer value between 100 and 4000 (default = 1000).\n",
     "\n",
-    "- **D**: The diffusion constant in m<sup>2</sup> s<sup>-1</sup>. This must be a float (default = 4.0e-15).\n",
+    "- **c0**: Sets the initial concentration in mol m<sup>-3</sup>, This must be a float with a value greater than 0 (default = 1000.0).\n",
     "\n",
-    "- **R**: The radius of the sphere used in the SPM in m. This must be a float with a value greater than 0 (default = 5.86e-6).\n",
+    "- **D**: The diffusion constant in m<sup>2</sup> s<sup>-1</sup>. This must be a float.\n",
+    "\n",
+    "- **R**: The radius of the sphere used in the SPM in m. This must be a float with a value greater than 0.\n",
     "\n",
     "- **a**: Particle surface area per unit volume (m<sup>-1</sup>). This must be a float with a value greater than or equal to 0.\n",
     "\n",
-    "- **L**: Electrode thickness in meters. This must be a float with a value greater than or equal to 0 (default = 75.6e-6).\n",
+    "- **L**: Electrode thickness in meters. This must be a float with a value greater than or equal to 0.\n",
     "\n",
     "- **iapp**: Applied current density in A m<sup>2</sup>. This must be a 1D array of floats of length tsteps. The default sets a constant current density of 0.73*10<sup>-3</sup>.\n",
     "\n",
@@ -252,7 +264,16 @@
    "outputs": [],
    "source": [
     "# Import default values\n",
-    "tsteps, dt, c0, D, R, a, L, iapp, iapp_label, electrode_charge = UI.set_defaults_pos()"
+    "tsteps, dt, n, c0, D, R, a, L, iapp, iapp_label, electrode_charge = UI.set_defaults_pos()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6b17d573",
+   "metadata": {},
+   "source": [
+    "The default values for parameters D, R, a, and L for positive and negative electrodes are taken from Chen et al. 2020, https://doi.org/10.1149/1945-7111/ab9050. "
    ]
   },
   {
@@ -276,16 +297,18 @@
     "tsteps = 100\n",
     "# Timestep size (s), real, greater than 0\n",
     "dt = 0.1\n",
+    "# Number of spatial nodes, integer, between 100 and 4000.\n",
+    "n = 1000\n",
     "# Initial concentration (mol m**-3), real, positive\n",
-    "c0 = 0.0\n",
+    "c0 = 1000.0\n",
     "# Diffusion coefficient (m**2 s**-1), real\n",
     "D = 4.0e-15\n",
     "# Width of block (m), real, greater than 0\n",
     "R = 5.86e-6\n",
     "# Particle surface area per unit volume (m**-1), real, greater than 0\n",
-    "a = 3.821839e5\n",
+    "a = 3.40e5\n",
     "# Electrode thickness (m), real, greater than 0\n",
-    "L = 85.2e-6"
+    "L = 75.6e-6"
    ]
   },
   {
@@ -297,33 +320,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "290f8d1f",
    "metadata": {},
    "source": [
     "For varying the applied current density (i<sub>app</sub>) there are the following additional options:\n",
     "\n",
-    "1. The i<sub>app</sub> values can be read in from a csv file called 'iapp_filename'. This is the default setting in user_input.py (a default csv file is provided).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a13edc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read in applied current density from csv file\n",
-    "iapp_filename = 'WLTP_m10.csv'\n",
-    "iapp, iapp_label, tsteps = UI.iapp_read_csv(iapp_filename)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eae568a2",
-   "metadata": {},
-   "source": [
-    "2. You can set a constant value for current density, 'iapp_const', by replacing the default csv file code with the code below."
+    "1. You can set a constant value for current density, 'iapp_const', using the code below.\n"
    ]
   },
   {
@@ -339,11 +343,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a71428c",
    "metadata": {},
    "source": [
-    "3. You can set a stepped current density, 'iapp_steps', from a 2D array of values and timesteps using the code below."
+    "2. You can set a stepped current density, 'iapp_steps', from a 2D array of values and timesteps using the code below."
    ]
   },
   {
@@ -356,6 +361,27 @@
     "# Step function - create 2D array of step values and integer timesteps starting at timestep 0\n",
     "iapp_steps = [[0.73*10**(-3), 0], [-0.73*10**(-3), int(tsteps/4)], [0.73*10**(-3), int(tsteps/2)]]\n",
     "iapp, iapp_label = UI.iapp_step_setup(tsteps, iapp_steps)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "858dd6b9",
+   "metadata": {},
+   "source": [
+    "3. The i<sub>app</sub> values can be read in from a csv file stored in the variable 'iapp_filename'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46c23118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in applied current density from csv file\n",
+    "iapp_filename = 'example.csv'\n",
+    "iapp, iapp_label, tsteps = UI.iapp_read_csv(iapp_filename)"
    ]
   },
   {
@@ -376,6 +402,34 @@
    "source": [
     "###### Manually set up applied current ######\n",
     "### Applied current (A m**2), real array of length tsteps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "78db0288",
+   "metadata": {},
+   "source": [
+    "All input parameters should be set above the line:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84490e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######### END SET VALUES #########"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a13f8257",
+   "metadata": {},
+   "source": [
+    "The code following this line in 'user_input.py' does not require editing by the user. This code validates the user input parameters, writes them to file, and calls the solver and plotter."
    ]
   },
   {
@@ -421,11 +475,34 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "643538bd",
    "metadata": {},
    "source": [
-    "## More advanced features"
+    "## Advanced Features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c83c7a57",
+   "metadata": {},
+   "source": [
+    "### Output Errors to file\n",
+    "\n",
+    "The messages output to terminal by the solver can be output to a file called 'stdout.txt' by uncommenting the following line at the top of 'user_input.py':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91620dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The stdout (command line output) can be output to a file. Uncomment the line below to use this option.\n",
+    "# sys.stdout = open('stdout.txt', 'w')"
    ]
   },
   {
@@ -445,11 +522,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbd0a0c9",
    "metadata": {},
    "source": [
-    "Full documentation of the code is available on doxygen via..."
+    "Full documentation of the code is available through Doxygen at https://hetsys.github.io/PX915_GroupB_22-23/."
    ]
   }
  ],
