Updates to plotter.py and tutorial, addition of example plots folder

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -86,7 +86,7 @@
    "id": "dc6c99bc",
    "metadata": {},
    "source": [
-    "The first time you use the program after downloading it from github, you will need to compile it first. This can be done by navigating to the SPAMS directory and using the command"
+    "The first time you use the program after downloading it from github, you will need to compile it. This can be done by navigating to the main program directory and using the command"
    ]
   },
   {
@@ -155,9 +155,9 @@
    "id": "23d6d998",
    "metadata": {},
    "source": [
-    "User input can be provided to the solver in two ways: by passing a simple input file containing a set of parameters or by passing a checkpoint file containing the end state of a previous run. The following are instructions to produce a simple input file.\n",
+    "User input can be provided to the solver in two ways: by passing a simple input file containing a set of parameters or by passing a checkpoint file containing the end state of a previous run. The following are instructions to produce a simple input file for a half-cell model run in serial.\n",
     "\n",
-    "In order to use solver parameters specific to your system, you will need to edit the user input file.\n",
+    "In order to use solver parameters specific to your system, you will need to edit the parameter values found in the user input file.\n",
     "\n",
     "In the main directory locate the file called 'user_input.py' and open it with your preferred text editor.\n",
     "\n",
@@ -205,7 +205,7 @@
    "source": [
     "### Input Parameters \n",
     "\n",
-    "Below, is a list of all available input parameters. Default values are provided for parameters that do not change between the positive and negative electodes."
+    "Below, is a list of all available input parameters. Default values are provided for parameters that do not change between the positive and negative electrodes."
    ]
   },
   {
@@ -374,10 +374,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "46c23118",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'UI' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3737/3294935542.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read in applied current density from csv file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0miapp_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'example.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0miapp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miapp_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtsteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miapp_read_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miapp_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'UI' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Read in applied current density from csv file\n",
     "iapp_filename = 'example.csv'\n",
@@ -445,17 +457,31 @@
    "id": "f6d1764c",
    "metadata": {},
    "source": [
-    "Any instuctions on non default visualisation should go here"
+    "When the solver is run, it produces plots that are saved in the main directory. The plots produced are:\n",
+    "\n",
+    "1. An animation showing the concentration of lithium as a function of time and space. This will be saved as 'concentration_animation.gif' and should look similar to the animation shown here.\n",
+    "\n",
+    "![animation](example_plots/concentration_animation.gif)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "734ddd83",
+   "cell_type": "markdown",
+   "id": "d17d17d6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example plot"
+    "2. A plot of the concentration profile at the end of the simulation, available as 'final_state.png'. An example is shown here.\n",
+    "\n",
+    "![conc plot](example_plots/final_state.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494d3788",
+   "metadata": {},
+   "source": [
+    "3. Plots of both voltage and applied current over time. These are saved to the same file called 'Voltage Current Plot.png'.\n",
+    "\n",
+    "![voltage current](example_plots/Voltage%20Current%20Plot.png)"
    ]
   },
   {
@@ -510,7 +536,15 @@
    "id": "cf75939b",
    "metadata": {},
    "source": [
-    "parallelisation?"
+    "### Parallelism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb19eb08",
+   "metadata": {},
+   "source": [
+    "### Full battery model"
    ]
   },
   {
