--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -21,6 +21,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "741c3baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modules needed for tutorial\n",
+    "import user_input_mod as UI\n",
+    "import plotter\n",
+    "import sys"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cbe9f0b3",
    "metadata": {},
@@ -86,12 +99,12 @@
    "id": "dc6c99bc",
    "metadata": {},
    "source": [
-    "The first time you use the program after downloading it from github, you will need to compile it. This can be done by navigating to the main program directory and using the command"
+    "The first time you use the program after downloading it from github, you will need to compile it. This can be done by navigating to the main program directory and using the make command."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "48f678f2",
    "metadata": {},
    "outputs": [
@@ -99,10 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ifort `nf-config --fflags` -c nc_output.f90 -lnetcdf `nf-config --flibs`\n",
-      "ifort -O3 -c read_inputs.f90\n",
-      "ifort -O3 -c finite_diff_solver.f90\n",
-      "ifort -O3 `nf-config --fflags` -DMKL read_inputs.o nc_output.o finite_diff_solver.o `nf-config --flibs` -Wl,--start-group /warwick/desktop/2018/software/MPI/intel/2017.4.196-GCC-6.4.0-2.28/impi/2017.3.196/imkl/2017.3.196/mkl/lib/intel64/libmkl_intel_lp64.a /warwick/desktop/2018/software/MPI/intel/2017.4.196-GCC-6.4.0-2.28/impi/2017.3.196/imkl/2017.3.196/mkl/lib/intel64/libmkl_intel_thread.a /warwick/desktop/2018/software/MPI/intel/2017.4.196-GCC-6.4.0-2.28/impi/2017.3.196/imkl/2017.3.196/mkl/lib/intel64/libmkl_core.a -Wl,--end-group -liomp5 -lpthread -lm -ldl -lnetcdf -o finite_diff_solver \n"
+      "make: `finite_diff_solver' is up to date.\r\n"
      ]
     }
    ],
@@ -128,6 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "set MKL_NUM_THREADS to 1\n",
       "User input successful, calling solver...\n",
       " Success writing output file, user_input_output.nc                              \n",
       "     \n",
@@ -141,7 +152,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "025b87c1",
    "metadata": {},
@@ -150,7 +160,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "23d6d998",
    "metadata": {},
@@ -165,7 +174,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "edd220af",
    "metadata": {},
@@ -174,7 +182,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "36735f82",
    "metadata": {},
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "cef968c0",
    "metadata": {},
    "outputs": [],
@@ -198,7 +205,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2af1b8e5",
    "metadata": {},
@@ -209,7 +215,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8a0a19c5",
    "metadata": {},
@@ -258,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "85f75c1e",
    "metadata": {},
    "outputs": [],
@@ -268,7 +273,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6b17d573",
    "metadata": {},
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b43cf5ac",
    "metadata": {},
    "outputs": [],
@@ -320,7 +324,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "290f8d1f",
    "metadata": {},
@@ -332,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8445591c",
    "metadata": {},
    "outputs": [],
@@ -343,7 +346,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8a71428c",
    "metadata": {},
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bde7d071",
    "metadata": {},
    "outputs": [],
@@ -364,7 +366,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "858dd6b9",
    "metadata": {},
@@ -374,19 +375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "46c23118",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'UI' is not defined",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'example.csv'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3737/3294935542.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read in applied current density from csv file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0miapp_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'example.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0miapp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miapp_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtsteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miapp_read_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miapp_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'UI' is not defined"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Read in applied current density from csv file\u001b[39;00m\n\u001b[1;32m      2\u001b[0m iapp_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexample.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m iapp, iapp_label, tsteps \u001b[38;5;241m=\u001b[39m UI\u001b[38;5;241m.\u001b[39miapp_read_csv(iapp_filename)\n",
+      "File \u001b[0;32m~/PX915_GroupB_22-23/user_input_mod.py:32\u001b[0m, in \u001b[0;36miapp_read_csv\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m'''!@brief Reads in the applied current density 'iapp' from a csv file provided by user.\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m@param[in] filename Name of the csv file containing iapp as Time, Current density.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;124;03m4. Define tsteps and the iapp_label.\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Read in csv file\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m iapp_file:\n\u001b[1;32m     33\u001b[0m     iapp_all \u001b[38;5;241m=\u001b[39m iapp_file\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m     34\u001b[0m iapp_file\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'example.csv'"
      ]
     }
    ],
@@ -417,7 +419,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "78db0288",
    "metadata": {},
@@ -436,7 +437,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a13f8257",
    "metadata": {},
@@ -501,16 +501,22 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "643538bd",
    "metadata": {},
    "source": [
-    "## Advanced Features"
+    "# Advanced Features"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e5614545",
+   "metadata": {},
+   "source": [
+    "In addition to the basic half single particle model, the program has several additional features:"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c83c7a57",
    "metadata": {},
@@ -522,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "91620dc8",
    "metadata": {},
    "outputs": [],
@@ -541,10 +547,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af3378e8",
+   "metadata": {},
+   "source": [
+    "A complete example script for running the solver in parallel is provided. See 'user_input_parallel.py'.\n",
+    "\n",
+    "*It should be noted that before running the solver in parallel, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb19eb08",
    "metadata": {},
    "source": [
     "### Full battery model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c353965",
+   "metadata": {},
+   "source": [
+    "A complete example script for modelling a full battery is provided, including use of the GITT function to parallelise it. See 'user_input_full_battery.py'.\n",
+    "\n",
+    "*It should be noted that before running the full battery solver, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fcf731",
+   "metadata": {},
+   "source": [
+    "### Uncertainty quantification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd8cd70",
+   "metadata": {},
+   "source": [
+    "The program provides scripts for performing both sensitivity analysis and uncertainty propagation. These can be run using the commands:\n",
+    "\n",
+    "    python3 sensitivity_analysis.py\n",
+    "\n",
+    "    python3 Uncertainty_Propagation.py\n",
+    "    \n",
+    "**Note** This will require loading of additional modules. Alternatively, the UQ results can be found in the developer documentation."
    ]
   },
   {
@@ -556,7 +604,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cbd0a0c9",
    "metadata": {},
@@ -567,7 +614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -581,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.6"
   },
   "vscode": {
    "interpreter": {
