Added checkpointing to tutorial.

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -160,11 +160,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23d6d998",
    "metadata": {},
    "source": [
-    "User input can be provided to the solver in two ways: by passing a simple input file containing a set of parameters or by passing a checkpoint file containing the end state of a previous run. The following are instructions to produce a simple input file for a half-cell model run in serial.\n",
+    "User input can be provided to the solver in two ways: by passing a simple input file containing a set of parameters or by passing a checkpoint file containing the state of a previous run at an intermediate timestep. The following are instructions to produce a simple input file for a half-cell model run in serial.\n",
     "\n",
     "In order to use solver parameters specific to your system, you will need to edit the parameter values found in the user input file.\n",
     "\n",
@@ -182,13 +183,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36735f82",
    "metadata": {},
    "source": [
     "In order to produce a simple input file, 'checkpoint' should be set to 'False'.\n",
     "\n",
-    "The default name for the input file is 'user_input', this can be changed if desired. You do not need to add a file extension, and there is a characters limit of 50."
+    "The default name for the input file is 'user_input', this can be changed if desired. You should not add a file extension, and there is a characters limit of 50."
    ]
   },
   {
@@ -366,11 +368,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "858dd6b9",
    "metadata": {},
    "source": [
-    "3. The i<sub>app</sub> values can be read in from a csv file stored in the variable 'iapp_filename'."
+    "3. The i<sub>app</sub> values can be read in from a csv file stored in the variable 'iapp_filename'.\n",
+    "(_This code block is provided as an example and will not run in this tutorial._)"
    ]
   },
   {
@@ -493,11 +497,42 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "ae5a2cbb",
+   "id": "4d42c919",
    "metadata": {},
    "source": [
-    "Information on how to restart from a checkpoint should go here"
+    "When the solver is run, checkpoint files are produced containing all of the user input parameters and the state of the system at an intermediate timestep of the simulation.\n",
+    "\n",
+    "The solver can be run by passing one of these checkpoint files. This will continue the run from the timestep at which the checkpoint was recorded.\n",
+    "\n",
+    "To do so, 'checkpoint' should be set to 'True' and the name of the desired checkpoint file should be passed to 'solver_input_filename'. The code can then be run as usual.\n",
+    "\n",
+    "(_This code block is provided as an example and will not run in this tutorial._)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4381db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select input file: checkpoint file (True) or user input parameters (False).\n",
+    "# Enter the filename of desired checkpoint file or the desired name of the file containing user input parameters.\n",
+    "checkpoint = True\n",
+    "solver_input_filename = 'checkpoints_user_input/example_checkpoint.nc'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a1bb7ff0",
+   "metadata": {},
+   "source": [
+    "The number of checkpoint files produced in a run can be changed by editing 'finite_diff_solver.f90'. Locate the call to the subroutine 'write checkpoint'. The subroutine will write a checkpoint file every 'freq' timesteps, which by default is 10% of tsteps. This can be changed by adding freq to the end of the call, as demonstrated below for 20 timesteps.\n",
+    "\n",
+    "`CALL write_checkpoint(tstep, tsteps, dt, n, c, D, R, a_small, L, iapp, electrode_charge, cstorage, filename, 20)`"
    ]
   },
   {
@@ -538,19 +573,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ffe5d494",
+   "metadata": {},
+   "source": [
+    "### Parallelism - Basic\n",
+    "\n",
+    "Basic parallelism can be set up in the solver by passing an optional argument 'nprocs', as shown in the code below. By default, nprocs is set to 1. \n",
+    "The number passed to 'nproc' is a maximum number of threads that the user would like to use, and based on this the call_solver function will optimise the actual number of threads for the user's system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1e05918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call fortran solver\n",
+    "UI.call_solver(solver_input_filename, checkpoint, nprocs=4)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf75939b",
    "metadata": {},
    "source": [
-    "### Parallelism"
+    "### Parallelism - GITT"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af3378e8",
    "metadata": {},
    "source": [
-    "A complete example script for running the solver in parallel is provided. See 'user_input_parallel.py'.\n",
+    "A complete example script for running the solver in parallel is provided. See 'user_input_parallel_simulation.py'.\n",
     "\n",
     "*It should be noted that before running the solver in parallel, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
    ]
